[package]
name = "solana_roma_token_swap"
version = "0.1.0"
edition = "2018"

# Dependencies
[dependencies]
solana-program = "1.8.0" # Updated to the latest stable version
anchor-lang = "0.24.2" # Updated to the latest stable version

[lib]
name = "solana_roma_token_swap"
path = "src/lib.rs"

[features]
default = ["std"]