[package]
name = "solana_voting_contract"
version = "0.1.0"
edition = "2018"
description = "A Solana smart contract for voting using the Anchor framework."
authors = ["Alex <alex@example.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
solana-program = "1.8.1"
anchor-lang = "0.24.2"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["anchor-debug"]

[profile.release]
opt-level = "z"
lto = true
debug = false
